gitignore minor change

--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,7 @@ GSYMS
 /egs/*/*/plp
 /egs/*/*/exp
 /egs/*/*/data
+/egs/*/*/enhan
 
 # /tools/
 /tools/pocolm/
@@ -132,6 +133,7 @@ GSYMS
 /tools/mpg123-1.21.0
 /tools/pthreads
 /tools/pthreads*.zip
+/tools/python
 /tools/sequitur
 /tools/sequitur-g2p
 /tools/srilm.tgz
